hphp/test/slow/closure/new_closure_without_constructor.php.expectf
object(Closure$test) (0) {
}

Fatal error: Can't create a Closure directly in %s/new_closure_without_constructor.php on line 10
